last minute changes

--- a/days/w1d2/w1d2_sol.ipynb
+++ b/days/w1d2/w1d2_sol.ipynb
@@ -2016,66 +2016,56 @@
         "\n",
         "# to import\n",
         "def relu(tensor):\n",
-        "  tensor[tensor < 0] = 0\n",
-        "  return tensor\n",
+        "    tensor[tensor < 0] = 0\n",
+        "    return tensor\n",
         "\n",
         "class ReLU(Module):\n",
-        "  def forward(self, x):\n",
-        "    return relu(x)\n",
+        "    def forward(self, x):\n",
+        "        return relu(x)\n",
         "\n",
         "\n",
         "# they can just use .flatten() instead\n",
         "class Flatten(Module):\n",
-        "  def __init__(self, start_dim=1, end_dim=-1):\n",
-        "    super().__init__()\n",
-        "    self.start_dim = start_dim\n",
-        "    self.end_dim = end_dim\n",
+        "    def __init__(self, start_dim=1, end_dim=-1):\n",
+        "        super().__init__()\n",
+        "        self.start_dim = start_dim\n",
+        "        self.end_dim = end_dim\n",
         "\n",
-        "  def forward(self, x):\n",
-        "    return x.flatten(self.start_dim, self.end_dim)\n",
+        "    def forward(self, x):\n",
+        "        return x.flatten(self.start_dim, self.end_dim)\n",
         "\n",
         "\n",
-        "# they should just use .mean((-2, -1)) instead\n",
+        "# they should just use .mean((-2, -1)) instead because in resnet output_size is always (1,1)\n",
+        "# this code is untested\n",
         "class AdaptiveAvgPool2d(Module):\n",
-        "  def __init__(self, output_size):\n",
-        "    super().__init__()\n",
-        "    self.output_size = force_pair(output_size)\n",
+        "    def __init__(self, output_size):\n",
+        "        super().__init__()\n",
+        "        self.output_size = force_pair(output_size)\n",
         "\n",
-        "  def forward(self, x):\n",
-        "    def kernels(in_dim, out_dim):\n",
-        "      return [slice(math.floor((i * in_dim) / out_dim),\n",
-        "          math.ceil(((i + 1) * in_dim) / out_dim))\n",
-        "        for i in range(out_dim)]\n",
-        "\n",
-        "    B, C, iH, iW = x.shape\n",
-        "    oH, oW = self.output_size\n",
-        "\n",
-        "    kHs = kernels(iH, oH)\n",
-        "    kWs = kernels(iW, oW)\n",
-        "\n",
-        "    out = torch.empty((B, C, oH, oW)).to(x.device)\n",
-        "    for i, ker_H in enumerate(kHs):\n",
-        "      for j, ker_W in enumerate(kWs):\n",
-        "        out[:, :, i, j] = torch.mean(x[:, :, ker_H, ker_W], (-2, -1))\n",
-        "    return out\n",
+        "    def forward(self, x):\n",
+        "        output_size = self.output_size\n",
+        "        kernel_size = (x.shape[0]//output_size[1], x.shape[1]//output_size[1])\n",
+        "        w = torch.ones(kernel_size)/(kernel_size[0]*kernel_size[1]).unsqueeze(0).unsqueeze(0).expand((x.shape[0], x.shape[0])+kernel_size)\n",
+        "        return torch.nn.functional.conv2d(x, w, stride=kernel_size)\n",
+        "        return out\n",
         "\n",
         "# To import\n",
         "class Linear(Module):\n",
-        "  def __init__(self, x, y, bias=True):\n",
-        "    super().__init__()\n",
-        "    weight_bound = 1 / np.sqrt(x)\n",
-        "    self.weight = Parameter(torch.FloatTensor(y, x).uniform_(-weight_bound, weight_bound))\n",
-        "    if bias:\n",
-        "      bias_bound = 1 / np.sqrt(y)\n",
-        "      self.bias = Parameter(torch.FloatTensor(y).uniform_(-bias_bound, bias_bound))\n",
-        "    else:\n",
-        "      self.bias = None\n",
+        "    def __init__(self, x, y, bias=True):\n",
+        "        super().__init__()\n",
+        "        weight_bound = 1 / np.sqrt(x)\n",
+        "        self.weight = Parameter(torch.FloatTensor(y, x).uniform_(-weight_bound, weight_bound))\n",
+        "        if bias:\n",
+        "            bias_bound = 1 / np.sqrt(y)\n",
+        "            self.bias = Parameter(torch.FloatTensor(y).uniform_(-bias_bound, bias_bound))\n",
+        "        else:\n",
+        "            self.bias = None\n",
         "\n",
-        "  def forward(self, x):\n",
-        "    x = torch.einsum(\"...j,kj->...k\", x, self.weight)\n",
-        "    if self.bias is not None:\n",
-        "      x += self.bias\n",
-        "    return x\n"
+        "    def forward(self, x):\n",
+        "        x = torch.einsum(\"...j,kj->...k\", x, self.weight)\n",
+        "        if self.bias is not None:\n",
+        "            x += self.bias\n",
+        "        return x\n"
       ]
     },
     {
