--- a/days/w1d2/w1d2_template.ipynb
+++ b/days/w1d2/w1d2_template.ipynb
@@ -1162,7 +1162,8 @@
         "In practice, we normalize entire channels at once, rather than single pixels. This means normalizing each pixel by the mean/variance of all the pixels within that channel, across height, width, and batch.\n",
         "\n",
         "Read more about batch normalization [here](https://towardsdatascience.com/batch-norm-explained-visually-how-it-works-and-why-neural-networks-need-it-b18919692739), and look at the diagrams of batchnorm during training/inference for more specifics, which you'll need for your implementation.\n",
-        "\n"
+        "\n",
+        "Documentation for batchnorm: https://pytorch.org/docs/stable/generated/torch.nn.BatchNorm2d.html"
       ]
     },
     {
@@ -1192,16 +1193,16 @@
       "outputs": [],
       "source": [
         "class BatchNorm2d(Module):\n",
-        "  def __init__(\n",
-        "    self,\n",
-        "    num_features,\n",
-        "    eps=1e-5,\n",
-        "    momentum=0.1,\n",
-        "  ):\n",
-        "    pass\n",
+        "    def __init__(\n",
+        "        self,\n",
+        "        num_features,\n",
+        "        eps=1e-5,\n",
+        "        momentum=0.1,\n",
+        "    ):\n",
+        "        pass\n",
         "\n",
-        "  def forward(self, x):\n",
-        "    pass"
+        "    def forward(self, x):\n",
+        "        pass"
       ]
     },
     {
