--- a/days/w1d2/w1d2_sol.ipynb
+++ b/days/w1d2/w1d2_sol.ipynb
@@ -96,6 +96,7 @@
         "from PIL import Image\n",
         "import requests\n",
         "from io import BytesIO\n",
+        "from IPython.display import display\n",
         "\n",
         "def load_image(url):\n",
         "  response = requests.get(url)\n",
@@ -1671,7 +1672,12 @@
         "id": "poNubMhVIFRr"
       },
       "source": [
-        "Implement now Conv2d and MaxPool2d classes, each inheriting `nn.Module`. When you inherit `nn.Module`, your class should define `__init__()` and `forward()` methods. These will be called when your module is initialized and called like a function, respectively. Go look at our doc on `nn.Module` subclasses for more info: https://docs.google.com/document/d/1PYW_lW_-jXpN394S8LtPqivSB91HjAwQi6_iDtmpwXg/edit?usp=sharing\n",
+        "Implement now Conv2d and MaxPool2d classes, each inheriting `nn.Module`. When you inherit `nn.Module`, your class should define:\n",
+        "\n",
+        "- `__init__()`: the constructor. At the start of your constructor, remember to call the constructor of `nn.Module` with `super().__init__()`.\n",
+        "- `forward()`: when your module as invoked as if it were a function with the expression `module(x)`, this results in a call to `module.forward(x)`.  \n",
+        "\n",
+        "If you need more info, read our doc on `nn.Module` subclasses [here](https://docs.google.com/document/d/1PYW_lW_-jXpN394S8LtPqivSB91HjAwQi6_iDtmpwXg/edit?usp=sharing)\n",
         "\n",
         "Crucially, your conv kernel should be wrapped in a `torch.nn.Parameter()`. When a `torch.nn.Parameter()` is assigned as an attribute of a `nn.Module`, it will get automatically registered as a learnable parameter, meaning that `model.parameters()` will include it. Additionally, by default `Parameters` keep track of their gradients, while `Tensors` by default do not.\n",
         "\n",
