--- a/days/w1d4/w1d4_template.ipynb
+++ b/days/w1d4/w1d4_template.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from days import w1d5_tests\n",
+    "from days import w1d4_tests\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -24,7 +24,7 @@
    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -38,9 +38,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.1"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
