--- a/days/w1d4/eric_guilhermo.ipynb
+++ b/days/w1d4/eric_guilhermo.ipynb
@@ -1025,6 +1025,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'priority': 1, 'parameters': {'gin_train.lr': 0.01, 'Model.P': 2, 'Model.H': 100, 'Model.K': 3, 'gin_train.betas': (0.9, 0.999)}}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "from operator import mul\n",
+    "\n",
+    "def make_tasks(possible_values):\n",
+    "    size = reduce(mul, map(len, possible_values.values()))\n",
+    "    ls = []\n",
+    "    for idx in range(size):\n",
+    "        new_values = {}\n",
+    "        for name, values in possible_values.items():\n",
+    "            new_values[name] = values[idx % len(values)]\n",
+    "            idx //= len(values)\n",
+    "        ls.append({\"priority\": 1, \"parameters\": new_values})\n",
+    "    return ls\n",
+    "\n",
+    "def thangify(pair):\n",
+    "    name, value = pair\n",
+    "    return f\"{name}={value}\"\n",
+    "\n",
+    "def stringify(dictionary):\n",
+    "    return list(map(thangify, list(dictionary.items())))\n",
+    "\n",
+    "# possible vals\n",
+    "possible_values = {\n",
+    "    \"gin_train.lr\": [0.01, 0.001],\n",
+    "    \"Model.P\": [2],\n",
+    "    \"Model.H\": [100],\n",
+    "    \"Model.K\": [3],\n",
+    "    \"gin_train.betas\": [(0.9, 0.999)]\n",
+    "}\n",
+    "\n",
+    "print(make_tasks(possible_values))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
