--- a/days/w1d4/w1d4_template.ipynb
+++ b/days/w1d4/w1d4_template.ipynb
@@ -867,10 +867,10 @@
     "    for params in make_grid(possible_values):\n",
     "        api_url = # blah\n",
     "        json_dict = {\n",
-    "            'token':\n",
+    "            'token': \n",
     "            # blah blah\n",
     "            'tasks': [{\n",
-    "                'parameters': [f\"{k}={v}\" for k, v in params].join(\"\\n\")\n",
+    "                'parameters': '\\n'.join([f\"{k}={v}\" for k, v in params])\n",
     "            }]\n",
     "        }\n",
     "        response = requests.post(api_url, json = json_dict)\n",
