--- a/days/w1d4/w1d4_template.ipynb
+++ b/days/w1d4/w1d4_template.ipynb
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'<html><title>500: Internal Server Error</title><body>500: Internal Server Error</body></html>'\n"
+      "b'{\"job_id\": 419, \"task_ids\": [3985, 3986, 3987, 3988, 3989, 3990, 3991, 3992, 3993, 3994, 3995, 3996, 3997, 3998, 3999, 4000, 4001, 4002]}'\n"
      ]
     }
    ],
@@ -92,10 +92,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a\\nb'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'\\n'.join(['a', 'b'])"
+   ]
   },
   {
    "cell_type": "code",
