--- a/days/w2d1/w2d1.ipynb
+++ b/days/w2d1/w2d1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
      "output_type": "stream",
      "text": [
       "attention pattern raw MATCH!!!!!!!!\n",
-      " SHAPE (2, 12, 3, 3) MEAN: -0.01314 STD: 0.1147 VALS [-0.1276 0.1329 0.1119 0.06959 -0.05208 0.1612 0.03845 0.0386 -0.1686 0.1203...]\n"
+      " SHAPE (2, 12, 3, 3) MEAN: 0.002831 STD: 0.1025 VALS [-0.03379 -0.003013 -0.1524 0.1516 -0.2043 0.173 0.05649 0.07717 0.01896 0.1144...]\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
      "output_type": "stream",
      "text": [
       "attention MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: -0.001297 STD: 0.1089 VALS [0.1178 0.0506 -0.04344 0.1474 0.1352 0.08401 -0.04605 0.08768 0.1694 -0.05225...]\n"
+      " SHAPE (2, 3, 768) MEAN: 0.003566 STD: 0.1166 VALS [0.05987 0.1762 -0.03046 0.03423 0.07852 0.1562 -0.2229 0.1216 0.1179 -0.007553...]\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "torch.Size([10, 117, 2])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -291,21 +291,22 @@
      "output_type": "stream",
      "text": [
       "layer norm MATCH!!!!!!!!\n",
-      " SHAPE (20, 10) MEAN: -9.537e-09 STD: 1.003 VALS [-0.3893 -1.309 1.483 0.3582 0.4961 0.1515 -1.697 -0.7905 1.395 0.3024...]\n"
+      " SHAPE (20, 10) MEAN: -4.768e-09 STD: 1.003 VALS [-0.3893 -1.309 1.483 0.3582 0.4961 0.1515 -1.697 -0.7905 1.395 0.3024...]\n"
      ]
     }
    ],
    "source": [
     "class LayerNorm(nn.Module):\n",
-    "    def __init__(self, normalized_dim: int):\n",
+    "    def __init__(self, normalized_dim: int, eps=1e-5):\n",
     "        super().__init__()\n",
     "        self.weight = t.nn.Parameter(t.ones((normalized_dim,)))\n",
     "        self.bias = t.nn.Parameter(t.zeros((normalized_dim,)))\n",
+    "        self.eps = eps\n",
     "\n",
     "    def forward(self, input: t.Tensor):  # shape[..., normalized_dim]\n",
     "        m = t.mean(input, dim=-1, keepdim=True).detach()\n",
-    "        s = t.std(input, dim=-1, keepdim=True, unbiased=False).detach()\n",
-    "        input = (input - m) / s\n",
+    "        v = t.var(input, dim=-1, keepdim=True, unbiased=False).detach()\n",
+    "        input = (input - m) / t.sqrt(v + self.eps)\n",
     "        return input * self.weight + self.bias\n",
     "\n",
     "\n",
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +323,7 @@
      "output_type": "stream",
      "text": [
       "bert MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: -4.139e-09 STD: 1 VALS [0.007131 -0.04372 0.6502 -0.5972 -1.097 0.7267 0.1275 -0.6035 -0.2226 0.2145...]\n"
+      " SHAPE (2, 3, 768) MEAN: -5.381e-09 STD: 1 VALS [0.007132 -0.04372 0.6502 -0.5972 -1.097 0.7267 0.1275 -0.6035 -0.2226 0.2145...]\n"
      ]
     }
    ],
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +452,7 @@
      "output_type": "stream",
      "text": [
       "bert embedding MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: -3.104e-09 STD: 1 VALS [-0.009385 -0.4919 0.9852 -0.3535 -3.624 1.333 1.163 1.449 1.063 0.246...]\n"
+      " SHAPE (2, 3, 768) MEAN: 2.07e-10 STD: 1 VALS [-0.009385 -0.4919 0.9852 -0.3535 -3.624 1.333 1.163 1.449 1.063 0.246...]\n"
      ]
     }
    ],
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +506,7 @@
      "output_type": "stream",
      "text": [
       "bert MATCH!!!!!!!!\n",
-      " SHAPE (1, 4, 28996) MEAN: 0.003031 STD: 0.5765 VALS [-0.5742 -0.4321 0.1186 -0.7165 -0.5262 0.4967 1.223 0.3165 -0.3247 -0.5717...]\n"
+      " SHAPE (1, 4, 28996) MEAN: 0.003031 STD: 0.5765 VALS [-0.5742 -0.432 0.1186 -0.7165 -0.5261 0.4967 1.223 0.3165 -0.3247 -0.5716...]\n"
      ]
     }
    ],
@@ -579,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +588,7 @@
      "output_type": "stream",
      "text": [
       "tensor([-1.0252e-05, -5.1260e-06,  0.0000e+00,  5.1260e-06,  1.0252e-05])\n",
-      "tensor([-2., -1.,  0.,  1.,  2.])\n",
+      "tensor([-2.0000, -1.0000,  0.0000,  1.0000,  2.0000])\n",
       "tensor([-1.0014e-05, -5.0068e-06,  0.0000e+00,  5.0068e-06,  1.0014e-05])\n"
      ]
     }
@@ -636,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -660,26 +661,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "Error(s) in loading state_dict for Bert:\n\tUnexpected key(s) in state_dict: \"classification_head.weight\", \"classification_head.bias\". ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-79-d73fa41433aa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m \u001b[0mmy_bert\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhf_to_our_state_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpretrained_bert\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/.local/lib/python3.8/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36mload_state_dict\u001b[0;34m(self, state_dict, strict)\u001b[0m\n\u001b[1;32m   1480\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1481\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_msgs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1482\u001b[0;31m             raise RuntimeError('Error(s) in loading state_dict for {}:\\n\\t{}'.format(\n\u001b[0m\u001b[1;32m   1483\u001b[0m                                self.__class__.__name__, \"\\n\\t\".join(error_msgs)))\n\u001b[1;32m   1484\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0m_IncompatibleKeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmissing_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0munexpected_keys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for Bert:\n\tUnexpected key(s) in state_dict: \"classification_head.weight\", \"classification_head.bias\". "
-     ]
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def hf_to_our_state_dict(hf_dict: Dict[str, t.Tensor]) -> Dict[str, t.Tensor]:\n",
     "    def include_key(key: str) -> bool:\n",
-    "        if key.startswith('classification_head'):\n",
+    "        if key.startswith(\"classification_head\"):\n",
     "            return False\n",
     "        return True\n",
     "\n",
@@ -711,14 +710,14 @@
     "                    subkeys[2] = \"bmlp\"\n",
     "                    subkeys[3] = {\"mlp1\": \"linear_1\", \"mlp2\": \"linear_2\"}[subkeys[3]]\n",
     "                    return \".\".join(subkeys)\n",
-    "                \n",
+    "\n",
     "                if subkeys[3] == \"layer_norm\":\n",
     "                    subkeys.pop(2)\n",
-    "                    subkeys[2] = \"ln1\"\n",
+    "                    subkeys[2] = \"ln2\"\n",
     "                    return \".\".join(subkeys)\n",
     "\n",
     "            if subkeys[2] == \"layer_norm\":\n",
-    "                subkeys[2] = \"ln2\"\n",
+    "                subkeys[2] = \"ln1\"\n",
     "                return \".\".join(subkeys)\n",
     "\n",
     "        return key\n",
@@ -731,10 +730,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "comparing Berts MATCH!!!!!!!!\n",
+      " SHAPE (10, 20, 28996) MEAN: -2.732 STD: 2.413 VALS [-5.65 -6.041 -6.096 -6.062 -5.946 -5.777 -5.977 -6.015 -6.028 -5.935...]\n"
+     ]
+    }
+   ],
+   "source": [
+    "bert_tests.test_same_output(my_bert, pretrained_bert, tol=1e-4)"
+   ]
   }
  ],
  "metadata": {
