w2d2: Begin fine tuning for classification

--- a/days/w2d1d2/bert_inference_training.ipynb
+++ b/days/w2d1d2/bert_inference_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,9 +10,9 @@
      "output_type": "stream",
      "text": [
       "attention pattern raw MATCH!!!!!!!!\n",
-      " SHAPE (2, 12, 3, 3) MEAN: -0.00532 STD: 0.1086 VALS [0.002758 0.02999 0.06517 -0.01514 0.0502 -0.0573 -0.1763 -0.0895 0.06617 0.09965...]\n",
+      " SHAPE (2, 12, 3, 3) MEAN: 0.006603 STD: 0.1129 VALS [0.05867 0.01584 -0.05108 -0.212 -0.2484 0.05948 0.04164 0.0499 -0.05705 0.1175...]\n",
       "attention MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: 0.0009956 STD: 0.1228 VALS [0.04385 -0.04034 -0.2278 0.09454 0.0366 0.02983 0.08136 -0.04939 -0.08551 -0.007104...]\n",
+      " SHAPE (2, 3, 768) MEAN: 0.0001962 STD: 0.1178 VALS [-0.1035 0.03562 -0.07408 0.1086 0.01748 0.05069 -0.14 -0.01052 0.01697 0.04285...]\n",
       "bert MATCH!!!!!!!!\n",
       " SHAPE (2, 3, 768) MEAN: -0.001554 STD: 0.1736 VALS [-0.08316 -0.09165 -0.03188 -0.03013 0.1001 0.09549 -0.1046 0.07742 0.0424 0.05553...]\n",
       "bert mlp MATCH!!!!!!!!\n",
@@ -36,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
       "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,28 +71,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_bert():\n",
+    "    my_bert = Bert(\n",
+    "        vocab_size=28996, hidden_size=768, max_position_embeddings=512, \n",
+    "        type_vocab_size=2, dropout=0.1, intermediate_size=3072, \n",
+    "        num_heads=12, num_layers=12\n",
+    "    )\n",
+    "    pretrained_state_dict = pretrained_bert.state_dict()\n",
+    "\n",
+    "    #pretrained_keys = pretrained_state_dict.keys()\n",
+    "    #my_keys = my_bert.state_dict().keys()\n",
+    "    #print(set(my_keys) - set(pretrained_keys))\n",
+    "\n",
+    "    del pretrained_state_dict[\"classification_head.weight\"]\n",
+    "    del pretrained_state_dict[\"classification_head.bias\"]\n",
+    "\n",
+    "    my_bert.load_state_dict(pretrained_state_dict)\n",
+    "    return my_bert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": "'[CLS] colleges 天 largest happened smile donation [SEP]'"
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(',', 0.12), ('fish', 0.12), ('meat', 0.08), ('eggs', 0.05), ('food', 0.05)]\n",
+      "[('fish', 0.07), ('meat', 0.05), ('eggs', 0.03), ('food', 0.02), ('bread', 0.02)]\n",
+      "[('fish', 0.05), ('eggs', 0.04), ('meat', 0.04), ('fruit', 0.02), ('food', 0.02)]\n",
+      "[('fish', 0.04), ('meat', 0.02), ('salt', 0.01), ('wine', 0.01), ('food', 0.01)]\n",
+      "[('fish', 0.04), ('meat', 0.02), ('eggs', 0.02), ('birds', 0.02), ('food', 0.01)]\n",
+      "[('fish', 0.04), ('food', 0.02), ('meat', 0.02), ('birds', 0.01), ('water', 0.01)]\n",
+      "[('fish', 0.03), ('birds', 0.02), ('more', 0.02), ('honey', 0.01), ('food', 0.01)]\n"
+     ]
     }
    ],
    "source": [
     "def ascii_art_probs(sentence):\n",
-    "    tokens = tokenizer.encode(sentence)\n",
-    "    model = Bert(tokens)"
+    "    bert = make_bert()\n",
+    "    token_ids = torch.Tensor(tokenizer.encode(sentence)).long().unsqueeze(0)\n",
+    "    mask_idxs = set()\n",
+    "    for idx, token_id in enumerate(token_ids[0]):\n",
+    "        if token_id == 103: # 103 == [MASK]\n",
+    "            mask_idxs.add(idx)\n",
+    "    unnormalized_output = bert(token_ids)\n",
+    "    output = torch.log_softmax(unnormalized_output, dim=-1)\n",
+    "    top_k = torch.topk(output, 5, dim=-1)\n",
+    "    results = []\n",
+    "    for seq_i, seq_top_k in enumerate(top_k.indices[0]):\n",
+    "        if seq_i in mask_idxs:\n",
+    "            results.append(list(zip(tokenizer.convert_ids_to_tokens(seq_top_k), [round(x.item(), 2) for x in top_k.values[0][seq_i].exp()])))\n",
+    "    for l in results:\n",
+    "        print(l)\n",
+    "\n",
+    "ascii_art_probs(\"The fish loves to eat [MASK] and [MASK] and [MASK] and [MASK] and [MASK] and [MASK] and [MASK].\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ClassificationBERT():\n",
+    "    def __init__(self, dropout, vocab_size, num_classes):\n",
+    "        self.bert = Bert(\n",
+    "            vocab_size=vocab_size, hidden_size=768, max_position_embeddings=512, \n",
+    "            type_vocab_size=2, dropout=dropout, intermediate_size=3072, \n",
+    "            num_heads=12, num_layers=12\n",
+    "        )\n",
+    "        self.dropout = torch.nn.Dropout(dropout)\n",
+    "        self.classification_layer = torch.nn.Linear(vocab_size, num_classes)\n",
+    "\n",
+    "        pretrained_state_dict = pretrained_bert.state_dict()\n",
+    "        del pretrained_state_dict[\"classification_head.weight\"]\n",
+    "        del pretrained_state_dict[\"classification_head.bias\"]\n",
+    "        self.bert.load_state_dict(pretrained_state_dict)\n",
+    "\n",
+    "    def forward(self, X):\n",
+    "        pass"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3.8.10 64-bit",
    "name": "python3"
   },
   "language_info": {
