--- a/days/w2d1/bert.ipynb
+++ b/days/w2d1/bert.ipynb
@@ -514,14 +514,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CBert(nn.Module):\n",
+    "    def __init__(self, vocab_size: int, hidden_size: int, \n",
+    "max_position_embeddings: int, type_vocab_size: int, \n",
+    "dropout: float, intermediate_size: int, num_heads: int, \n",
+    "num_layers: int, num_classes : int\n",
+    ") -> None:\n",
+    "        super().__init__()\n",
+    "        self.embedding = BertEmbedding(vocab_size, hidden_size, max_position_embeddings, type_vocab_size, dropout)\n",
+    "        self.transformer = nn.Sequential(\n",
+    "            *[BertBlock(hidden_size, intermediate_size, num_heads, dropout) for _ in range(num_layers)],\n",
+    "        )\n",
+    "        self.lm_head = nn.ModuleDict({\n",
+    "            'mlp': nn.Linear(hidden_size, hidden_size),\n",
+    "            'gelu': nn.GELU(),\n",
+    "            'unembedding': nn.Linear(hidden_size, vocab_size),\n",
+    "            'layer_norm': LayerNorm(hidden_size),\n",
+    "        })\n",
+    "        self.classification_head = nn.Linear(hidden_size, num_classes)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "    \n",
+    "    def forward(self, input_ids):\n",
+    "        x = self.embedding(input_ids, t.zeros_like(input_ids))\n",
+    "        x = self.transformer(x)\n",
+    "        # x = self.lm_head['mlp'](x)\n",
+    "        # x = self.lm_head['gelu'](x)\n",
+    "        # x = self.lm_head['layer_norm'](x)\n",
+    "        # x = self.lm_head['unembedding'](x)\n",
+    "        x = self.classification_head(self.dropout(x))\n",
+    "        return x\n",
+    "\n",
+    "#bert_tests.test_bert(CBert)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 84.1M/84.1M [00:02<00:00, 30.4MB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torchtext\n",
+    "data_train, data_test = torchtext.datasets.IMDB(\n",
+    "    root='.data',\n",
+    "    split=('train', 'test')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torchtext.data.datasets_utils._RawTextIterableDataset at 0x7fa6051bd850>"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_train"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   }
  ],
