--- a/days/w2d1d2/bert_inference_training.ipynb
+++ b/days/w2d1d2/bert_inference_training.ipynb
@@ -136,19 +136,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ClassificationBERT():\n",
-    "    def __init__(self, dropout, vocab_size, num_classes):\n",
+    "    def __init__(self, num_classes):\n",
+    "        VOCAB_SIZE = 28996\n",
+    "        DROPOUT=0.1\n",
     "        self.bert = Bert(\n",
-    "            vocab_size=vocab_size, hidden_size=768, max_position_embeddings=512, \n",
-    "            type_vocab_size=2, dropout=dropout, intermediate_size=3072, \n",
+    "            vocab_size=VOCAB_SIZE, hidden_size=768, max_position_embeddings=512, \n",
+    "            type_vocab_size=2, dropout=DROPOUT, intermediate_size=3072, \n",
     "            num_heads=12, num_layers=12\n",
     "        )\n",
-    "        self.dropout = torch.nn.Dropout(dropout)\n",
-    "        self.classification_layer = torch.nn.Linear(vocab_size, num_classes)\n",
+    "        self.dropout = torch.nn.Dropout(DROPOUT)\n",
+    "        # TODO attach this to the last block of BERT as a hidden_size x num_classes linear layer,\n",
+    "        # not on top of the vocab_size output of BERT\n",
+    "        self.classification_layer = torch.nn.Linear(VOCAB_SIZE, num_classes)\n",
     "\n",
     "        pretrained_state_dict = pretrained_bert.state_dict()\n",
     "        del pretrained_state_dict[\"classification_head.weight\"]\n",
@@ -156,7 +160,48 @@
     "        self.bert.load_state_dict(pretrained_state_dict)\n",
     "\n",
     "    def forward(self, X):\n",
-    "        pass"
+    "        return self.classification_layer(self.dropout(self.bert(X)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torchtext\n",
+    "import random\n",
+    "data_train, data_test = torchtext.datasets.IMDB(root='.data', split=('train', 'test'))\n",
+    "data_train_list = list(data_train)\n",
+    "random.shuffle(data_train_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[(tensor([[  101.,   107., 12510.,   102.],\n          [  101.,  1258.,  3195.,   102.],\n          [  101.,   146.,  1821.,   102.],\n          [  101.,  1409.,  1128.,   102.],\n          [  101.,  1258.,   107.,   102.],\n          [  101.,  1332.,  1122.,   102.],\n          [  101., 22449.,   170.,   102.]]),\n  tensor([0, 1, 1, 1, 0, 1, 0], dtype=torch.int8)),\n (tensor([[  101.,   146.,  1138.,   102.],\n          [  101.,   146.,   112.,   102.],\n          [  101.,  2048.,   117.,   102.],\n          [  101.,  9498.,  1103.,   102.],\n          [  101., 12107.,  5253.,   102.],\n          [  101.,   178.,  8703.,   102.],\n          [  101.,   146.,  1108.,   102.]]),\n  tensor([0, 0, 1, 0, 1, 0, 0], dtype=torch.int8)),\n (tensor([[  101.,  1109., 22891.,   102.],\n          [  101.,   178.,  2140.,   102.],\n          [  101.,  2907.,  1227.,   102.],\n          [  101., 13411., 10197.,   102.],\n          [  101.,  1258., 10761.,   102.],\n          [  101., 15783.,   161.,   102.],\n          [  101.,  3100., 15198.,   102.]]),\n  tensor([0, 1, 1, 0, 0, 1, 0], dtype=torch.int8)),\n (tensor([[  101.,  1188.,  1110.,   102.],\n          [  101.,  1109., 13664.,   102.],\n          [  101.,  1188.,  1110.,   102.],\n          [  101.,   146.,  1525.,   102.],\n          [  101.,   146.,  2542.,   102.],\n          [  101.,   146.,  2566.,   102.],\n          [  101.,  5823.,  2542.,   102.]]),\n  tensor([0, 1, 1, 0, 0, 0, 0], dtype=torch.int8)),\n (tensor([[ 101.,  146., 1458.,  102.],\n          [ 101.,  146., 1108.,  102.]]),\n  tensor([0, 1], dtype=torch.int8))]"
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def make_batches(data_train_list, batch_size, max_seq_len):\n",
+    "    batches = []\n",
+    "    for batch_start in range(0, len(data_train_list), batch_size):\n",
+    "        batch_end = min(batch_start + batch_size, len(data_train_list))\n",
+    "        ratings, sentences = [list(tup) for tup in list(zip(*data_train_list[batch_start:batch_end]))]\n",
+    "        tokens = tokenizer(sentences, padding='longest', max_length=max_seq_len, truncation=True)\n",
+    "        ratings01 = torch.tensor([ rating == 'pos' for rating in ratings ], dtype=torch.int8)\n",
+    "        tokens_tensor = torch.Tensor(tokens.input_ids)\n",
+    "        batches.append((tokens_tensor, ratings01))\n",
+    "    return batches"
    ]
   }
  ],
